# graphiti

./: .coveragerc  .dockerignore  .env.example  .env.milvus  .env.railway  .gitignore  .graphiti.json  AGENTS.md  BUGFIX_REPORT.md  CHATGPT_INTEGRATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DETAILS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOMAIN_AGNOSTIC_IMPROVEMENT_PLAN.md  DUPLICATES.md  Dockerfile  FINAL_ANALYSIS.md  FINAL_DIAGNOSIS.md  GREMLIN_FEATURE.md  HOTFIXES.md  ISSUE_TRIAGE.md  ImplementationTodoList.md  LICENSE  Makefile  OLLAMA_INTEGRATION.md  OTEL_TRACING.md  PRIORITY_ROADMAP.md  PROVIDER_CONFIGURATION.md  PR_DESCRIPTION.md  PlanRequirements.md  Pmll.py  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  RESTART_INSTRUCTIONS.md  SECURITY.md  SOLUTION.md  (+52 more)
mcp_server/: .dockerignore  .env.example  .env.example.gemini_ollama  .env.example.openrouter_ollama  .env.nas.example  .graphiti.json  .graphiti.json.coding-example  .graphiti.json.example  .python-version  .tool-versions  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.dev  Makefile  PUBLISHING_CHECKLIST.md  PYPI_PUBLISHING.md  PYPI_SETUP_COMPLETE.md  README-reranker.md  README.md  __init__.py  anthropic_example.py  benchmark_mcp.py  claude_desktop_config.json  config.yaml  config_manager.py  config_schema.py  cursor_rules.md  cursor_rules_compact.md  diagnose_issue.py  direct_test.py  docker-compose.dev.yml  docker-compose.falkordb.yml  docker-compose.yml  embedder_config.py  env.example  example_usage.py  factories.py  fix_gemini_embedder.py  graphiti_mcp_server.py  graphiti_service.py  (+32 more)
mcp_server/config/: config-docker-falkordb-combined.yaml  config-docker-falkordb-gemini.yaml  config-docker-falkordb-milvus.yaml  config-docker-falkordb.yaml  config-docker-kuzu.yaml  config-docker-neo4j-external.yaml  config-docker-neo4j-gemini.yaml  config-docker-neo4j-milvus.yaml  config-docker-neo4j.yaml  config-gemini-neo4j.yaml  config-neptune.yaml  config-second-brain-stdio.yaml  config-second-brain.yaml  config.ollama.yaml  config.yaml  extraction_ontologies.yaml  mcp_config_sse_example.json  mcp_config_stdio_example.json
mcp_server/docker/: .dockerignore  Dockerfile  Dockerfile.custom  Dockerfile.falkordb-combined  Dockerfile.standalone  Dockerfile.standalone-local  README-falkordb-combined.md  README-kuzu.md  README.md  build-standalone.sh  build-with-version.sh  docker-compose-falkordb-combined.yml  docker-compose-falkordb-milvus.yml  docker-compose-falkordb.yml  docker-compose-gemini-adc.yml  docker-compose-kuzu.yml  docker-compose-neo4j-external.yml  docker-compose-neo4j-milvus.yml  docker-compose-neo4j.yml  docker-compose.yml  github-actions-example.yml
mcp_server/docs/: DOCKER_WATCH.md  FASTMCP_CLOUD_DEPLOYMENT.md  OAUTH_SETUP.md  OLLAMA_MIGRATION_SUMMARY.md  cursor_rules.md  nas-mcp-deployment-playbook.md
mcp_server/docs/agents/: graphiti-config-generator.agent.md
mcp_server/examples/: client_examples.md  run_with_anthropic.py
mcp_server/scripts/: verify_fastmcp_cloud_readiness.py
mcp_server/src/: graphiti_mcp_server.py  graphiti_mcp_server.py.bak  oauth_wrapper.py
mcp_server/src/classifiers/: __init__.py  base.py  llm_based.py  rule_based.py
mcp_server/src/config/: embedder_config.py  llm_config.py  manager.py  schema.py
mcp_server/src/models/: edge_types.py  entity_types.py  response_types.py
mcp_server/src/services/: __init__.py  chutes_client.py  factories.py  factories.py.bak3  instrumented_clients.py  neo4j_service.py  openai_compatible_client.py  queue_service.py  search_service.py  smart_writer.py
mcp_server/src/utils/: formatting.py  node_name_lookup.py  project_config.py  search_tuning.py  transport_security.py  type_config.py  utils.py
mcp_server/tests/: README.md  __init__.py  conftest.py  http_mcp_test_client.py  ingest_wait_helpers.py  pytest.ini  run_tests.py  test_async_operations.py  test_basic.py  test_bearer_auth.py  test_benchmark_mcp.py  test_classifier_base.py  test_comprehensive_integration.py  test_configuration.py  test_constrained_soft_extraction.py  test_core_parity.py  test_cross_encoder_factory.py  test_database_param.py  test_dockerfile_standalone_version_unit.py  test_env_var_substitution.py  test_factories.py  test_falkordb_config.py  test_falkordb_integration.py  test_fixture_backend_resolution_unit.py  test_fixtures.py  test_formatting_score.py  test_graph_exploration_int.py  test_graphiti_ingest_unit.py  test_graphiti_mcp_server_import_unit.py  test_graphiti_mcp_server_unit.py  test_graphiti_service_preflight.py  test_group_id_normalization.py  test_http_integration.py  test_ingest_wait_helpers_unit.py  test_inmemory_example.py  test_integration.py  test_live_falkordb_int.py  test_llm_classifier.py  test_load_and_async_compat_unit.py  test_max_tokens_config.py  (+38 more)
server/: .env.example  Dockerfile  FASTCOREF_README.md  FINAL_COREFERENCE_TEST.py  FINAL_SUMMARY.py  GOEMOTIONS_INTEGRATION_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  conftest.py  debug_test.py  docker-compose.yml  log_conf.yaml  pyproject.toml  test_coreference_standalone.py  test_english_translation.py  test_fastcoref_basic.py  test_fastcoref_extraction.py  test_goemotions.py  test_integration.py  test_multiple_emotions.py  test_response_structure.py
server/graph_service/: config.py  group_ids.py  logging_config.py  main.py  models.py  zep_graphiti.py
server/graph_service/db/: neo4j_constraints.cypher
server/graph_service/dto/: __init__.py  common.py  groups.py  ingest.py  retrieve.py
server/graph_service/ontologies/: __init__.py  agent_memory_v1.py  registry.py
server/graph_service/routers/: browser_agent.py  groups.py  ingest.py  messages2.py  metrics.py  retrieve.py
server/tests/: __init__.py  conftest.py  test_async_worker.py  test_dto_validation.py  test_extraction_pipeline_integration.py  test_group_ids.py  test_groups_router.py  test_ingest_schema_validation.py  test_ingest_worker.py  test_live_falkordb_int.py  test_ontology_registry.py  test_zep_graphiti.py
server/tests/ai/: __init__.py  demo_fastcoref.py  quick_english_test.py  (+12 more)
(+943 files in other folders)
