[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "graphiti-core==0.18.8",
    "azure-identity>=1.21.0",
]

[project.optional-dependencies]
falkordb = ["falkordb>=1.1.2,<2.0.0"]