[project]
name = "graph-service"
version = "0.1.0"
description = "Zep Graph service implementing Graphiti package"
readme = "README.md"
authors = [{ name = "Paul Paliychuk", email = "paul@getzep.com" }]
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "graphiti-core @ ../",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn>=0.30.6,<0.31.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-xdist>=3.6.1,<4.0.0",
  "ruff>=0.6.2,<1.0.0",
  "fastapi-cli>=0.0.5,<0.1.0",
  "pydantic>=2.8.2,<3.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
